--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-contratos-asociados-dj/form-contratos-asociados-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-contratos-asociados-dj/form-contratos-asociados-dj.component.html
@@ -73,7 +73,7 @@
                     </div>
                 </mat-card-content>
             </mat-card>
-            <div *ngIf="dataSource[i]?.filterPredicate?.length > 0">
+            <div *ngIf="dataSource[i]?.filterPredicate?.length > 0 && this.dataSource[i]?.data != null">
                 <div style="margin-top: 1em;">
                     Seleccione la(s) Institución(es) Educativa(s), sede(s) asociada(s) al proceso
                 </div>
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="text-right">
-                <button mat-button color="warn" type="button" class="btn-eliminar" (click)="eliminar( i )"
+                <button mat-button color="warn" type="button" class="btn-eliminar"  (click)="eliminarPerfil( i )"
                     [disabled]="perfiles.controls.length == 1">
                     <img src="assets/img/icon/menos.svg" alt="Eliminar vigencia">
                     Eliminar contrato
