--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-cc-general/control-y-tabla-cc-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-cc-general/control-y-tabla-cc-general.component.html
@@ -44,8 +44,8 @@
             <ng-container matColumnDef="estadoControversia">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20"> Estado de la controversia </th>
                 <td mat-cell *matCellDef="let element" align="center">
-                    <div *ngIf="element.estadoControversiaCodigo=='1' && element.tipoControversiaCodigo=='1'">En proceso
-                        de registro</div>
+                    <div *ngIf="element.tipoControversiaCodigo=='1'">{{ element.estadoControversia }}</div>
+                    <!--<div *ngIf="element.estadoControversiaCodigo=='1' && element.tipoControversiaCodigo=='1'"></div>
                     <div *ngIf="element.estadoControversiaCodigo=='2' && element.tipoControversiaCodigo=='1'">Rechazada
                         en comité pre-tecnico</div>
                     <div *ngIf="element.estadoControversiaCodigo=='3' && element.tipoControversiaCodigo=='1'">Avalada en
@@ -65,7 +65,7 @@
                     <div *ngIf="element.estadoControversiaCodigo=='10' && element.tipoControversiaCodigo=='1'">En
                         tramite</div>
                     <div *ngIf="element.estadoControversiaCodigo=='11' && element.tipoControversiaCodigo=='1'">Cerrada
-                    </div>
+                    </div>-->
                     <div *ngIf="element.estadoControversiaCodigo=='1' && element.tipoControversiaCodigo!='1'">En proceso
                         de registro</div>
                     <div *ngIf="element.estadoControversiaCodigo=='2' && element.tipoControversiaCodigo!='1'">En proceso
@@ -101,7 +101,7 @@
                         </button>
                         <button mat-raised-button color="accent" class="btn-table"
                             *ngIf="((element.estadoControversiaCodigo=='1' || element.estadoControversiaCodigo=='2' || element.estadoControversiaCodigo=='3' || element.estadoControversiaCodigo=='4')&& element.registroCompletoNombre=='Incompleto')
-                            || (element.estadoControversiaCodigo=='4' &&  element.registroCompletoNombre=='Completo')"
+                            || (element.estadoControversiaCodigo=='4' || element.estadoControversiaCodigo=='14' || element.estadoControversiaCodigo=='15' &&  element.registroCompletoNombre=='Completo')"
                             (click)=this.verDetalleEditarTramiteButton(element.controversiaContractualId);>
                             Ver detalle/Editar
                         </button>
@@ -139,7 +139,7 @@
                             Registrar controversia
                         </button>
                         <button mat-raised-button color="accent" class="btn-table"
-                            *ngIf="element.estadoControversiaCodigo=='1' || element.estadoControversiaCodigo=='2' || element.estadoControversiaCodigo=='3'"
+                            *ngIf="element.estadoControversiaCodigo=='1' || element.estadoControversiaCodigo=='2' || element.estadoControversiaCodigo=='3' || element.estadoControversiaCodigo=='14'|| element.estadoControversiaCodigo=='15'"
                             (click)=this.verDetalleEditarTramiteButton(element.controversiaContractualId);>
                             Ver detalle/Editar
                         </button>
